2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* settings/xfce-session-settings.desktop.in,
	  settings/xfce4-session-settings.glade: Change "Sessions and Startup" back
	  to "Session and Startup".

2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* settings/main.c, settings/xfce-session-settings.desktop.in,
	  xfce4-session-settings.glade: Make settings dialog title/description
	  consistent. Properly stop startup notification when being plugged
	  into the settings manager.

2008-10-23	Brian Tarricone <bjt23@cornell.edu>

	* {settings,xfce4-session}/Makefile.am: Fix MAINTAINER_MODE
	  build with glib 2.12.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session-settings.glade: Remove 'remove' button
	  and add a 'save session' button.  Add a session save progress
	  dialog.
	* settings/session-editor.c: Add the ability to save the
	  session from the dialog.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Validate the value for the
	  restart style hint to avoid a possible crash.  Sort the
	  client list first by priority, then by program name.  Allow
	  the user to change the priority.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Update bug report address to http://bugs.xfce.org/.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Display PID in session editor.
	  Display restart style in session editor, and allow user to
	  change the value (is there a way to actually make it look
	  like a combo box?).

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-client.c: Handle the SmProcessID property
	  correctly.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Fix a couple memleaks and a typo
	  that causes operations on clients to fail.

2008-10-21	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Cache the DBusGProxy in the list
	  store.  Set clients to kill to SmRestartIfRunning, not