@@ -12,7 +12,7 @@ m4_define([xfsm_version_minor], [5])
 m4_define([xfsm_version_micro], [91])
 m4_define([xfsm_version_nano], [])
 m4_define([xfsm_version_build], [@REVISION@])
-m4_define([xfsm_version_tag], [])
+m4_define([xfsm_version_tag], [svn])
 m4_define([xfsm_version], [xfsm_version_major().xfsm_version_minor().xfsm_version_micro()ifelse(xfsm_version_nano(), [], [], [.xfsm_version_nano()])ifelse(xfsm_version_tag(), [svn], [xfsm_version_tag()[-r]xfsm_version_build()], [])])
 
 dnl Initialize autoconf
@@ -48,7 +48,7 @@ AC_PROG_LIBTOOL()
 
 dnl check for standard header files
 AC_HEADER_STDC
-AC_CHECK_HEADERS([asm/unistd.h errno.h fcntl.h limits.h linux/ioprio.h \
+AC_CHECK_HEADERS([asm/unistd.h errno.h fcntl.h limits.h \
                   netdb.h signal.h stdarg.h sys/param.h sys/resource.h \
                   sys/socket.h sys/time.h sys/wait.h sys/utsname.h time.h \
                   unistd.h])
@@ -126,6 +126,21 @@ if test x"$enable_session_screenshots" != x"yes"; then
 else
   AC_DEFINE([SESSION_SCREENSHOTS], [1], [Define for session screenshots])
   AC_MSG_RESULT([yes])
+fi
+
+dnl check for linux/ioprio.h, and also check that the header actually
+dnl works, as some kernels have bad headers.  using AC_CHECK_HEADERS()
+dnl prints a scary warning with a request to report a bug if it fails,
+dnl but we don't want that.
+AC_MSG_CHECKING([whether linux/ioprio.h exists and actually works])
+AC_COMPILE_IFELSE([
+AC_INCLUDES_DEFAULT
+#include <linux/ioprio.h>
+                ], [linux_ioprio_works=yes], [linux_ioprio_works=no])
+AC_MSG_RESULT([$linux_ioprio_works])
+if test "x$linux_ioprio_works" = "xyes"; then
+  AC_DEFINE([HAVE_WORKING_LINUX_IOPRIO_H], [1],
+            [Defined if linux/ioprio.h not only exists, but works properly])
 fi
 
 AC_OUTPUT([
