@@ -51,15 +51,15 @@
 #  include <asm/unistd.h>
 #  include <sys/syscall.h>
 #  ifdef __NR_ioprio_set
-#    ifdef HAVE_LINUX_IOPRIO_H
+#    ifdef HAVE_WORKING_LINUX_IOPRIO_H
 #      include <linux/ioprio.h>
-#    else  /* if !HAVE_LINUX_IOPRIO_H */
+#    else  /* if !HAVE_WORKING_LINUX_IOPRIO_H */
 #      define IOPRIO_CLASS_SHIFT              (13)
 #      define IOPRIO_PRIO_MASK                ((1UL << IOPRIO_CLASS_SHIFT) - 1)
 #      define IOPRIO_PRIO_VALUE(class, data)  (((class) << IOPRIO_CLASS_SHIFT) | data)
 #      define IOPRIO_WHO_PROCESS              (1)
 #      define IOPRIO_CLASS_IDLE               (3)
-#    endif  /* !HAVE_LINUX_IOPRIO_H */
+#    endif  /* !HAVE_WORKING_LINUX_IOPRIO_H */
 #  endif  /* __NR_ioprio_set */
 #endif  /* HAVE_ASM_UNISTD_H */
 
