@@ -7,6 +7,8 @@
 - Make splash engines store their settings in Xfconf.
 - Handle the ProcessID SM property properly.
 - Add a session editor to the settings dialog.
+- Fix compilation on some Linux systems with a broken linux/ioprio.h
+  header (bug 4515).
 
 
 4.5.91
