@@ -1,3 +1,9 @@
+2008-10-31	Brian Tarricone <bjt23@cornell.edu>
+
+	* configure.in.in,xfce4-session/xfsm-manager.c: Change the
+	  detection of linux/ioprio.h, as the header is apparently
+	  present but broken on some systems (bug 4515).
+
 2008-10-31	Jannis Pohlmann <jannis@xfce.org>
 
 	* settings/xfce-session-settings.desktop.in,
